# JabronEZ

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-publish.yml  pr-validation.yml
Configuration/: freedom35.games.txt  gamemodes_server.txt
Documentation/: VirtualBox.md
Extension/: .gitignore  AMBuildScript.patch  AMBuilder  AMBuilder.patch  F35Extension.sln  F35Extension.vcxproj  F35Extension.vcxproj.filters  extension.cpp  extension.h  forwards.cpp  forwards.h  globals.cpp  globals.h  natives.cpp  natives.h  smsdk_config.h  version.rc
Meta/: ApplyPatches.sh  InstallBuildDependencies.sh  PullHL2SDK.sh  PullSourceMM.sh  PullSourcemod.sh  SetupDevelopmentEnvironment.sh
Patches/: 0001-Freedom35-Add-support-for-FireEventEx.patch  0002-Freedom35-Build-the-extension-when-building-SourceMo.patch
Plugins/: Core.sp  grenades.sp  vworld_test.sp
Resources/: f35_explosions_fx.pcf
cfg/: jabronez.cfg
gamedata/: jabronez.games.txt
particles/: jabronez_particles_0001.pcf
src/: callables.cpp  callables.h  callables_macros.h  console_manager.cpp  console_manager.h  draw_spots_timer.cpp  draw_spots_timer.h  entity_utilities.cpp  entity_utilities.h  extension.cpp  extension.h  functions.cpp  functions.h  game_events_manager.cpp  game_events_manager.h  god_mode.h  grenade_goto_next_spot_or_finish_timer.cpp  grenade_goto_next_spot_or_finish_timer.h  grenade_throw_tickrate.h  grenade_trigger_playback_timer.cpp  grenade_trigger_playback_timer.h  handle_playback_timer.cpp  handle_playback_timer.h  hook.cpp  hook.h  hooks.cpp  hooks.h  hooks_macros.h  hud_utilities.cpp  hud_utilities.h  menu_manager.cpp  menu_manager.h  menus.cpp  menus.h  particle_manager.cpp  particle_manager.h  player.cpp  player.h  player_manager.cpp  player_manager.h  (+23 more)
src/console/: console_manager.cpp  console_manager.h
src/entities/: entity_utilities.cpp  entity_utilities.h  temporary_entity_creator.h
src/events/: game_events_manager.cpp  game_events_manager.h
src/gui/: hud_utilities.cpp  menu_manager.cpp  menu_manager.h
src/hooks/: cbasecsgrenade_start_grenade_throw_hook.cpp  cbasecsgrenade_start_grenade_throw_hook.h  ccsplayer_bump_weapon_hook.cpp  ccsplayer_bump_weapon_hook.h  ccsplayer_can_acquire_hook.cpp  ccsplayer_can_acquire_hook.h  ccsplayer_cs_weapon_drop_hook.cpp  ccsplayer_cs_weapon_drop_hook.h  ccsplayer_slot_occupied_hook.cpp  ccsplayer_slot_occupied_hook.h  ccsplayer_weapon_equip_hook.cpp  ccsplayer_weapon_equip_hook.h  cmolotov_projectile_detonate_hook.cpp  cmolotov_projectile_detonate_hook.h  csmokegrenade_projectile_detonate_hook.cpp  csmokegrenade_projectile_detonate_hook.h  hooks.cpp  hooks.h  player_run_cmd_hook.cpp  player_run_cmd_hook.h  projectile_create_hooks.cpp  projectile_create_hooks.h
src/misc/: recipient_filter.cpp  recipient_filter.h  sdk_variant_t.cpp
src/particles/: particle_manager.cpp
src/players/: player.cpp  player.h  player_manager.cpp  player_manager.h
src/projectiles/: projectile_mode.cpp  projectile_mode.h  projectile_parameters.cpp
src/timers/: draw_spots_timer.cpp  draw_spots_timer.h  entity_timer.cpp  entity_timer.h  grenade_goto_next_spot_or_finish_timer.cpp  grenade_goto_next_spot_or_finish_timer.h  grenade_trigger_playback_timer.cpp  grenade_trigger_playback_timer.h  handle_playback_timer.cpp  handle_playback_timer.h  player_timer.h  remove_short_smoke_timer.h  simple_timer.cpp
src/translations/: translations.h
translations/: jabronez.phrases.txt
